--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- page-container -->
     <div class="container">
       <h1>CALCOLA IL PREZZO DEL TUO BIGLIETTO</h1>
+      <!-- container dei form -->
       <div class="form-container">
         <div class="dati-input">
           <div class="row">
@@ -33,15 +34,18 @@
             </div>
 
           </div>
-
+            <!-- Doppio button -->
           <div class="row">
             <button id="genera" class="btn" type="button" name="genera">Genera</button>
             <button id="annulla" class="btn" type="button" name="annulla">Annulla</button>
+            <!-- Doppio button -->
 
           </div>
         </div>
 
       </div>
+      <!-- container dei form -->
+        <!-- biglietto stampato calcolato -->
       <h2>IL TUO BIGLIETTO</h2>
 
       <div id="biglietto-container" class="biglietto-container">
@@ -74,6 +78,7 @@
           </div>
         </div>
       </div>
+      <!-- biglietto stampato calcolato -->
 
     </div>
 
